--- a/infrastructure/playbooks/main.yml
+++ b/infrastructure/playbooks/main.yml
@@ -72,6 +72,13 @@
     notify:
       - restart nginx
 
+  - name: Set environment variables
+    lineinfile:
+      dest: '/etc/environment'
+      line: 'export {{ item }}'
+    with_items:
+      - 'API_KEY=b07a12df7d52e6c118e5d47d3f9e60135b109a1f'
+
   #roles:
     #- role: rvm_io.rvm1-ruby
       #tags: ruby
